Some UI & Replit related updates/changes

--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,26 +1,13 @@
 </div>
 <footer class="w-full my-4 py-4 bg-gray-300 xl:text-xl">
 	<div class="mx-auto text-center text-black max-w-screen-xl">
-		<a href="https://github.com/odysseusmax/tg-index" target="_blank"> @odysseusmax </a>
+		2021-22 © <a href="https://github.com/culturecloud" target="_blank"> Culture Cloud </a>
 	</div>
 </footer>
 <script>
-	function toggleTheme() {
-  element = document.documentElement;
-  if (element.className == "light") {
-    element.className = "dark";
-    localStorage.theme = 'dark';
-    } else {
-      element.className = "light";
-      localStorage.theme = 'light';
-      }
-}
-
 function chatImgAlt() {
     document.getElementById('chatimg').src = 'https://s3.imgcdn.dev/nWNtu.jpg'
 }
-
 </script>
 </body>
-
 </html>
