--- a/app/templates/info.html
+++ b/app/templates/info.html
@@ -35,7 +35,7 @@
                                             "layoutControls": {
                                                 "autoPlay": false,
                                                 "mute": true,
-                                                "allowTheatre": true,
+                                                "allowTheatre": false,
                                                 "playPauseAnimation": true,
                                                 "playbackRateEnabled": true,
                                                 "allowDownload": false,
