--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -1,20 +1,10 @@
 <!doctype html>
-<html class="light" lang="en">
+<html lang="en">
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind-dark.min.css" integrity="sha512-5qCImO4bnvlpsqNsYuZEHlzJhEN3MBqd3GZp0QCJS0gVNq3Q+MT9Msw8c4UT2j5Cuq/29kz3jCmgYJpekNqSMQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<script src="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.js">
-
-	</script>
-	<script>
-		if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
-    document.documentElement.className = 'dark';
-    } else {
-      document.documentElement.className = 'light';
-      }
-	</script>
+    <script data-cfasync="false" src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.fluidplayer.com/v3/current/fluidplayer.min.js"></script>
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Google+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 		* {
@@ -28,18 +18,18 @@
 
 </head>
 
-<body class="bg-white text-black dark:bg-gray-800 dark:text-white ">
+<body class="bg-gray-800 text-white">
 
-	<header class="bg-blue-500 dark:bg-gray-900 text-white mb-2 p-2 w-full shadow-md">
-		<div class="flex mx-auto justify-between items-center max-w-screen-xl">
-			<a href="/" id="title-a" class="text-left font-normal text-l lg:text-2xl xl:text-3xl p-2"> Telegram index </a>
-			<div class="space-x-1">
-				<button onclick="toggleTheme()" class="rounded-full bg-white dark:bg-gray-500">
-        <img src="https://s3.imgcdn.dev/nW9YV.png" class="h-8" alt="Theme">
-      </button>
+	<header class="bg-gray-900 text-white w-full p-2 shadow-md">
+		<div class="flex mx-auto justify-between">
+			<a href="/" id="title-a" class="font-black text-xl lg:text-2xl xl:text-3xl">TG-INDEX</a>
+			<div>
 			{% if authenticated %}
-      <button class="rounded-full bg-white"><a href="/logout">
-      <img src="https://s3.imgcdn.dev/ndsjh.png" class="h-8" alt="Logout">
+      <button><a href="/logout">
+      <svg xmlns="http://www.w3.org/2000/svg" height="32" fill="white" viewBox="0 0 16 16">
+  <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+  <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+  </svg>
       </a>
       </button>
       {% else %} {% endif %}
