--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,22 +4,22 @@
 </script>
 {% endblock %}
 
-<div class="block md:flex justify-between items-center px-4 text-center">
+<div class="md:flex items-center justify-between p-2 text-center border-b">
 	
     <!-- * channel logo and name -->
-    <div class="flex m-2 block bg-gray-200 dark:bg-gray-700 rounded-full shadow-inner shadow-md px-2 items-center justify-center">
-		<img class="my-1 w-12 h-12 rounded-full bg-black outline-none" src="{{logo}}">
-        <a class="mx-1" href="javascript:window.location.href=window.location.href"> 
-        {{name}}   
-        </a>
+    <div class="rounded-full text-gray-200 bg-gray-500 text-2xl flex align-center w-max">
+		<img class="rounded-full w-14 h-14 max-w-none" src="{{logo}}">
+        <span class="flex items-center px-3 py-3">
+            {{name}}
+        </span>
     </div>
 
-    <!-- * search bar-->
+    <!-- * search bar -->
     <div class="m-1">    
         <form class="">
             <div class="my-2 md:my-1">
-                <div class="flex items-center rounded-full shadow dark:bg-gray-500">
-                    <input class="rounded-full w-full py-1 px-6 dark:text-white dark:bg-gray-500 leading-tight focus:outline-none dark:text-black"
+                <div class="flex items-center rounded-full shadow bg-gray-500">
+                    <input class="rounded-full w-full py-1 px-6 bg-gray-500 leading-tight focus:outline-none text-black"
                         name="search" id="search" value="{% if search %}{{search}}{% endif %}" type="text"
                         placeholder="Search">
                     <div class="p-1">
@@ -34,44 +34,40 @@
                     </div>
                 </div>
             </div>
-
         </form>
     </div>
-
 </div>
 
 {% if item_list %}
 
 <div class="m-2">
-    <div class="block flex flex-wrap sm:justify-center items-center text-center break-all">
+    <div class="flex flex-wrap justify-center items-center break-all">
         {% for item in item_list %}
-
         <!-- Card  -->
-        <div title="{% if item.media %} {{item.mime_type}} | {{item.human_size}} {% else %} Text message {% endif %}"
-            href="{{item.url}}"
-            class="text-sm items-center justify-center w-full min-h-full sm:w-2/5 md:w-1/4 lg:w-1/6 rounded m-2 shadow hover:shadow-lg dark:bg-gray-500">
-            
-            {% if item.media %}
-            <div class="absolute bg-blue-600 rounded-full dark:bg-blue-600 text-white my-1 mx-6 py-0 px-1">{{item.file_id}}</div>
-
-                <a href="{{item.url}}"><img src="{{item.thumbnail}}" class="w-full object-scale-down h-32 rounded shadow-inner"></a>
-                <div class="p-2 fill-blue-400">{{item.insight}}</div>
-                <!-- Buttons container -->
-                <span class="inline-flex mb-1 rounded shadow-inner dark:bg-blue-400">                    
-                    {% if not block_downloads %}
-                        <!-- Direct file download button -->
-                        <a href="{{item.download}}"
-                            class="flex-1 hover:bg-blue-500 text-gray-900 font-semibold py-1 px-2 rounded items-center">
+{% if item.media %}
+<div class="w-full sm:w-2/5 md:w-1/4 lg:w-1/6 rounded m-2 shadow hover:shadow-lg bg-gray-500">
+  <img class="w-full rounded-t" src="{{item.thumbnail}}"/>
+  <div class="p-2 border-b border-gray-light">
+    <a href="{{item.url}}"><div class="font-medium text-base text-gray-darker">{{item.insight}}</div></a>
+  </div>
+  <div class="p-2 flex">
+    <div class="flex-grow">
+      <span class="inline-block bg-red-700 rounded p-1 mr-2">
+          {{item.file_id}}
+      </span>
+    </div>
+      
+    <div class="inline-flex rounded shadow-inner bg-blue-400">
+      <a href="{{item.download}}"
+                            class="flex-1 hover:bg-blue-300 text-gray-900 font-semibold py-1 px-2 rounded items-center">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                                     d="M15 13l-3 3m0 0l-3-3m3 3V8m0 13a9 9 0 110-18 9 9 0 010 18z" />
                             </svg>
                         </a>
-
-                        {% if 'video' in item.mime_type %}
-                            <!--  Kodi/media player supported url ending with v.mp4 -->
-                            <a title="v.mp4" href="{{item.download}}"
+      {% if 'video' in item.mime_type %}
+      <a title="v.mp4" href="{{item.download}}"
                                 class="flex-1 hover:bg-blue-300 text-gray-900 font-semibold py-1 px-2 rounded items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                                     stroke="currentColor">
@@ -81,9 +77,7 @@
                                         d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
                                 </svg>
                             </a>
-
-                            <!-- One click single item playlist Download -->
-                            <button title="{{item.filename}}.m3u" onclick="singleItemPlaylist('{{item.download}}','{{item.quoted_filename}}', '{{m3u_option}}');"
+      <button title="{{item.filename}}.m3u" onclick="singleItemPlaylist('{{item.download}}','{{item.quoted_filename}}', '{{m3u_option}}');"
                                 class="flex-1 hover:bg-blue-300 text-gray-900 font-semibold py-1 px-2 rounded items-center">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                                     stroke="currentColor">
@@ -91,25 +85,13 @@
                                         d="M3 4h13M3 8h9m-9 4h9m5-4v12m0 0l-4-4m4 4l4-4" />
                                 </svg>
                             </button>
-                        {% endif %}
-                    {% endif %}
-
-                </span>
-
-            {% else %}
-            <a style="-webkit-user-select: all;-moz-user-select: all;-ms-user-select: all;user-select: all;" href={{item.url}}>
-                <div class="p-4 rounded shadow-inner text-dark py-0 px-2">{{item.insight}}</div>
-            </a>
-            <div class="bg-blue-600 rounded-full dark:bg-blue-600 text-white my-1 mx-6 py-0 px-1">{{item.file_id}}</div>
-            {% endif %}
-
-          
-        </div>
-
-
-        {% endfor %}
-    </div>
-
+{% endif %}
+</div>
+</div>
+</div>
+{% endif %}
+{% endfor %}
+</div>
 </div>
 
 <p class="my-2 text-center font-semibold">
